# Simple_KB_RAG_Model-Using-FAISS-

./: .gitignore  README.md  pyproject.toml
model/: model.py
